modify sample app

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.github.Jayze24:ColorfulTextView:0.0.1'
+    implementation "com.airbnb.android:lottie:5.2.0"
 }
